# marketcompass-subnet

./: README.md  pyproject.toml  requirements.txt
src/: pyproject.toml
src/subnet/: cli-self.py  cli-sub.py  cli.py
src/subnet/miner/: model.py
src/subnet/selfvalidator/: _config.py  selfvalidator.py
src/subnet/subvalidator/: _config.py  subvalidator.py
src/subnet/utils/: utils.py
src/subnet/validator/: validator.py
