[tool.poetry]
name = "subnet"
version = "0.1.0"
description = "A simpler Commune subnet CLI tool"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
python-dotenv = "^1.0.1"
requests = "^2.28.1"

communex="^0.1.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"